--- a/package.json
+++ b/package.json
@@ -1,41 +1,28 @@
 {
-  "name": "generator-react-stroybook",
+  "name": "generator-react-storybook",
   "version": "0.1.0",
-  "private": true,
+  "description": "",
+  "main": "generators/index.js",
   "dependencies": {
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0"
+    "chalk": "^2.4.1",
+    "mkdirp": "^0.5.1",
+    "yeoman-generator": "^3.1.1",
+    "yosay": "^2.0.2"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Louis-Chen/generator-react-stroybook.git"
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "keywords": [
+    "react",
+    "create-react-app",
+    "storybook",
+    "yeoman-generator"
+  ],
+  "author": "Louis-Chen",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Louis-Chen/generator-react-stroybook/issues"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@babel/core": "^7.6.4",
-    "@storybook/addon-actions": "^5.2.5",
-    "@storybook/addon-links": "^5.2.5",
-    "@storybook/addons": "^5.2.5",
-    "@storybook/react": "^5.2.5",
-    "babel-loader": "^8.0.6"
-  }
+  "homepage": "https://github.com/Louis-Chen/generator-react-stroybook#readme"
 }
