--- a/package.json
+++ b/package.json
@@ -1,28 +1,28 @@
 {
-  "name": "generator-react-storybook",
-  "version": "0.1.0",
-  "description": "",
-  "main": "generators/index.js",
-  "dependencies": {
-    "chalk": "^2.4.1",
-    "mkdirp": "^0.5.1",
-    "yeoman-generator": "^3.1.1",
-    "yosay": "^2.0.2"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Louis-Chen/generator-react-stroybook.git"
-  },
-  "keywords": [
-    "react",
-    "create-react-app",
-    "storybook",
-    "yeoman-generator"
-  ],
-  "author": "Louis-Chen",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Louis-Chen/generator-react-stroybook/issues"
-  },
-  "homepage": "https://github.com/Louis-Chen/generator-react-stroybook#readme"
+	"name": "generator-react-storybook",
+	"version": "0.1.0",
+	"description": "",
+	"main": "generators/index.js",
+	"dependencies": {
+		"chalk": "^2.4.1",
+		"mkdirp": "^0.5.1",
+		"yeoman-generator": "^3.1.1",
+		"yosay": "^2.0.2"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/Louis-Chen/generator-react-storybook.git"
+	},
+	"keywords": [
+		"react",
+		"create-react-app",
+		"storybook",
+		"yeoman-generator"
+	],
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/Louis-Chen/generator-react-storybook/issues"
+	},
+	"homepage": "https://github.com/Louis-Chen/generator-react-storybook#readme"
 }
